[metadata]
name = quangis_workflows
version = 0.0.0
author = nsbg
author_email = n.steenbergen@uu.nl
description = Workflow generation for the QuAnGIS project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quangis/quangis-workflow-generator
project_urls =
    Bug Tracker = https://github.com/quangis/quangis-workflow-generator/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
python_requires = >=3.9
include-package-data = True

[options.package_data]
quangis_workflows = py.typed

[options.entry_points]
console_scripts =
    quangis-tool-repo = quangis_workflows.cli.tool_repo:main
    quangis-wf-abstract = quangis_workflows.cli.wf_abstract:main
    quangis-wf-gen = quangis_workflows.cli.wf_gen:main

[pycodestyle]

[mypy]

[mypy-jpype.*]
ignore_missing_imports = True

[mypy-nl.uu.cs.*]
ignore_missing_imports = True

[mypy-rdflib.*]
ignore_missing_imports = True

[mypy-owlrl.*]
ignore_missing_imports = True

[mypy-pyparsing.*]
ignore_missing_imports = True
