[metadata]
name = quangis_workflow
version = 0.0.0
author = nsbg
author_email = n.steenbergen@uu.nl
description = Workflow generation for the QuAnGIS project, including the transformation algebra for core concepts of geographical information.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quangis/quangis-workflow
project_urls =
    Bug Tracker = https://github.com/quangis/quangis-workflow/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
python_requires = >=3.9
include-package-data = True

[options.package_data]
cct = py.typed
quangis_workflows = py.typed

[options.entry_points]
console_scripts =
    quangis-tool-repo = quangis_workflows.cli.tool_repo:main
    quangis-wf-abstract = quangis_workflows.cli.wf_abstract:main
    quangis-wf-gen = quangis_workflows.cli.wf_gen:main

[pycodestyle]
ignore = E128, W503, E124, W504, E302, E211
# suppresses whining about visual indentation in our multiline lambdas in
# transformation algebra definitions

[mypy]

[mypy-jpype.*]
ignore_missing_imports = True

[mypy-nl.uu.cs.*]
ignore_missing_imports = True

[mypy-rdflib.*]
ignore_missing_imports = True

[mypy-owlrl.*]
ignore_missing_imports = True

[mypy-pyparsing.*]
ignore_missing_imports = True
